--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   }
   img {
     border: solid 3px purple;
-    height: 200px;
-    width: 250px;
+    height: 30%;
   }
 </style>
 <h1>Header</h1>
