--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     color: green;
   }
   body {
-    background-color: yellow;
+    background-color: #BBB010;
   }
 </style>
 <h1 class="green">Header</h1>
