--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   body {
     background-color: #BBB010;
   }
-  
+  img: hover {
+    height: 10%;
+  }
 </style>
 <h1 class="green_centre">Header</h1>
 <body> 
