--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   body {
     background-color: #BBB010;
   }
-  img: hover {
-    height: 10%;
+  img:hover {
+    border: dashed 3px red;
   }
 </style>
 <h1 class="green_centre">Header</h1>
