--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   img {
     border: solid 3px purple;
     height: 50%;
-    border-radius: 50%;
+    border-radius: 50px;
   }
   .green_centre {
     color: green;
