--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   img {
     border: solid 3px purple;
     height: 50%;
-    border-radius: 50px;
+    border-radius: 50%;
   }
   .green_centre {
     color: green;
