--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <style>
-  p {
-    text-align: center;
-  }
+  
   img {
     border: solid 3px purple;
     height: 50%;
     border-radius: 50%;
+    margin: 0 auto;
+    
   }
   .green_centre {
     color: green;
