--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   }
   img {
     border: solid 3px purple;
-    height: 50%;
+    height: 250px;
     border-radius: 50%;
     margin: 0 auto;
     
