--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   }
   img {
     border: solid 3px purple;
-    height: 250px;
+    height: 50%;
     border-radius: 50%;
-    margin: 0 auto;
+   
     
   }
   .green_centre {
