--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     text-align: center;
   }
   body {
-    background-image: "https://images4.alphacoders.com/565/565989.jpg";
+    background-image: https://images4.alphacoders.com/565/565989.jpg;
   }
   img:hover {
     border: dashed 3px red;
