--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <style>
   p {
     text-align: center;
+    color: white;
   }
   img {
     border: solid 3px purple;
@@ -15,6 +16,7 @@
   }
   body {
     background-image:url(https://images4.alphacoders.com/565/565989.jpg);
+    background-size: 50%;
   }
   img:hover {
     border: dashed 3px red;
