--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     border: solid 3px purple;
     height: 50%;
     border-radius: 50%;
-   
-    
+    margin-left: auto;
+    margin-right: auto;
   }
   .green_centre {
     color: green;
