--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
+    display: block;
   }
   .green_centre {
     color: green;
