--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     display: block;
   }
   .green_centre {
-    color: green;
+    color: #E111EE;
     text-align: center;
+    font-size: 15px;
   }
   body {
     background-image:url(https://images4.alphacoders.com/565/565989.jpg);
